...
            Group {
#if os(macOS)
                WhereNowPortraitViewTabbed(includeGame: true)
#elseif os(iOS)
                if orientation.isPortrait {
                    VStack {
                        Text("WHERE NOW!")
                            .modifier(UpdatedSpinnable(tapToggler: $tabViewSelected, tapActionNotification: ($tabViewSelected.wrappedValue ? "Portait mode tabview selected" : "Portrait mode long scrollView selected")))
                            .padding(.bottom)
                        if tabViewSelected {
                            WhereNowPortraitViewTabbed()
                        } else {
                            WhereNowPortraitView()
...
