...
    var body: some View {
        ZStack {
            Image("Pheonixy")
                .resizable()
                .frame(width: 154, height: 167)
                .opacity(tapped ? 0 : 1)
            Image("PurpleBird")
                .resizable()
                .opacity(opacity)
                .frame(width: BirdView.birdWidth, height: BirdView.birdHeight)
                .onChange(of: hurt) { oldValue, newValue in
                    if oldValue == false {
                        opacity = 0.5
...
